--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-strikingPowerConstantNumber = 10
-HPConstantNumber = 10
+strikingPowerConstantNumber = 100
+HPConstantNumber = 100
+LevelUpConstantNumber = 5
